--- a/Python_scikit-learn.Rmd
+++ b/Python_scikit-learn.Rmd
@@ -8,3 +8,5 @@ W make scoree jest parametr needs_proba i needs_threshold. Popatrzec na to.
 
 Zobaczyć też https://scikit-learn.org/stable/modules/model_evaluation.html#scoring  . Wyszukać fraze "needs_threshold=True" . 
 
+Może być jeszcze potrzebny w samym gridzie parametr "refit".
+
